# sbi_projects

./: .gitignore  README.md  apply_category_po.ps1  fix_bom.ps1  fix_duplicate_guard.ps1  fix_fieldname.ps1  fix_site_masters.ps1  fix_stage_sync.ps1  fix_stage_tree_count.ps1  fix_steel_import.ps1  install_batch1.ps1  install_batch2a.ps1  install_batch2a_v2_addcosthead.ps1  install_batch2b.ps1  install_phaseA.ps1  install_phaseA2.ps1  install_phase_a.ps1  install_so_fetch.ps1  license.txt  parser.py  pyproject.toml  steel_fabrication_import.py
files/: annexure.py  steel_fabrication_import.json  steel_fabrication_import.py
files 1/: annexure.py  apply_category_po_v2.ps1
files 2/: annexure.py  apply_annexure_v3.ps1  steel_fabrication_import.py
sbi_projects/: hooks.py  modules.txt  site_api.py
sbi_projects/public/css/: sbi_branding.css
sbi_projects/public/js/: lead.js  project.js  sales_order.js
sbi_projects/sbi_projects/: crm_hooks.py  dwl_budget.py  geofence_report.py  lead_hooks.py  payment_terms_net.py  project_hooks.py  site_api.py  so_fetch.py  stage_tree.py  work_log_hooks.py
sbi_projects/sbi_projects/doctype/boq/: boq.js  boq.json  boq.py
sbi_projects/sbi_projects/doctype/boq_item/: boq_item.json  boq_item.py
sbi_projects/sbi_projects/doctype/boq_template/: boq_template.json  boq_template.py
sbi_projects/sbi_projects/steel_bom/: annexure.py  parser.py
sbi_projects/setup/: branding.py  crm_setup.py  install.py
sbi_projects/www/: login.html  login.py  sbi_site_manifest.json  sbi_sw.js  site_app.html  site_app.py
(+59 files in other folders)
