[project]
name = "sbi_projects"
authors = [{ name = "Velmaska", email = "info@velmaska.com" }]
description = "Site Management, Project Templates and BOQ for Shiv Bharat Infrastructures"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"
